test/compilable/imports/test2401b.d
module imports.test2401b;

import imports.test2401a : Foo;
