test/fail_compilation/imports/test314c.d
module imports.test314c;

import imports.test314imp : foo;
